deploy/k8s/overlays/production/api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent33-api
spec:
  replicas: 1
  minReadySeconds: 10
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: ghcr.io/mattmre/agent33:replace-with-release-tag
          imagePullPolicy: Always
